@@ -1,4 +1,5 @@
-/* uDig - User Friendly Desktop Internet GIS client
+/**
+ * uDig - User Friendly Desktop Internet GIS client
  * http://udig.refractions.net
  * (C) 2004-2012, Refractions Research Inc.
  *
@@ -19,23 +20,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 
-import org.locationtech.udig.printing.model.Box;
-import org.locationtech.udig.printing.model.ModelFactory;
-import org.locationtech.udig.printing.model.Page;
-import org.locationtech.udig.printing.ui.Template;
-import org.locationtech.udig.printing.ui.TemplateFactory;
-import org.locationtech.udig.printing.ui.internal.BasicTemplateFactory;
-import org.locationtech.udig.printing.ui.internal.Messages;
-import org.locationtech.udig.printing.ui.internal.PrintingPlugin;
-import org.locationtech.udig.project.internal.Map;
-import org.locationtech.udig.project.internal.Project;
-import org.locationtech.udig.project.ui.ApplicationGIS;
-import org.locationtech.udig.project.ui.internal.MapEditor;
-import org.locationtech.udig.project.ui.internal.MapEditorInput;
-import org.locationtech.udig.project.ui.internal.MapEditorPart;
-import org.locationtech.udig.project.ui.internal.MapEditorWithPalette;
-import org.locationtech.udig.project.ui.internal.MapPart;
-
 import org.eclipse.draw2d.geometry.Dimension;
 import org.eclipse.emf.ecore.util.EcoreUtil;
 import org.eclipse.jface.action.IAction;
@@ -48,124 +32,131 @@ import org.eclipse.jface.window.Window;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.ui.IEditorActionDelegate;
-import org.eclipse.ui.IEditorInput;
 import org.eclipse.ui.IEditorPart;
-import org.eclipse.ui.IWorkbenchPart;
-import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.dialogs.ListDialog;
+import org.locationtech.udig.printing.model.Box;
+import org.locationtech.udig.printing.model.ModelFactory;
+import org.locationtech.udig.printing.model.Page;
+import org.locationtech.udig.printing.ui.Template;
+import org.locationtech.udig.printing.ui.TemplateFactory;
+import org.locationtech.udig.printing.ui.internal.BasicTemplateFactory;
+import org.locationtech.udig.printing.ui.internal.Messages;
+import org.locationtech.udig.printing.ui.internal.PrintingPlugin;
+import org.locationtech.udig.project.internal.Map;
+import org.locationtech.udig.project.internal.Project;
+import org.locationtech.udig.project.ui.ApplicationGIS;
+import org.locationtech.udig.project.ui.internal.ApplicationGISInternal;
+import org.locationtech.udig.project.ui.internal.MapEditorPart;
+import org.locationtech.udig.project.ui.internal.MapEditorWithPalette;
+import org.locationtech.udig.project.ui.internal.MapPart;
 
 /**
- * Creates a Page using the current map
- * 
+ * Creates a page using the current map
+ *
  * @author Richard Gould
- * 
+ *
  * @version 1.3.0
  */
 public class CreatePageAction implements IEditorActionDelegate {
 
-    public void run( IAction action ) {
-        IEditorPart activeEditor = PlatformUI.getWorkbench().getActiveWorkbenchWindow()
-                .getActivePage().getActiveEditor();
-        IEditorInput input = activeEditor.getEditorInput();
-        if (!(activeEditor instanceof MapEditorPart) && !(input instanceof MapEditorInput)) {
+    @Override
+    public void run(IAction action) {
+
+        MapPart mapEditor = ApplicationGISInternal.getActiveMapPart();
+
+        if (mapEditor == null) {
             MessageDialog.openError(Display.getDefault().getActiveShell(),
                     Messages.CreatePageAction_printError_title,
                     Messages.CreatePageAction_printError_text);
-        }
+        } else {
 
-        MapPart mapEditor = (MapPart) activeEditor;
-        
-        Template template = getPageTemplate();
+            Template template = getPageTemplate();
 
-        if (template == null) {
-            return;
-        }
+            if (template == null) {
+                return;
+            }
 
-        Map map = null;
-        Project project = null;
+            Map map = null;
+            Project project = null;
 
-        Map oldMap = (Map) ((MapEditorInput) input).getProjectElement();
-        project = oldMap.getProjectInternal();
-        try {
-            map = (Map) EcoreUtil.copy(oldMap);   
-        }
-        catch( Throwable t ){
-            // unable to copy map?
-            t.printStackTrace();
-            return;
-        }
+            Map oldMap = mapEditor.getAdapter(Map.class);
+            project = oldMap.getProjectInternal();
+            try {
+                map = EcoreUtil.copy(oldMap);
+            } catch (Throwable t) {
+                // unable to copy map?
+                t.printStackTrace();
+                return;
+            }
 
-        project.getElementsInternal().add(map);
+            project.getElementsInternal().add(map);
 
-        //Point size = //mapEditor.getComposite().getSize();
-        Point partSize;
-        if( mapEditor instanceof MapEditorPart ){
-            MapEditorPart part = (MapEditorPart) mapEditor;
-        	partSize = part.getComposite().getSize();
-        }
-        else if( mapEditor instanceof MapEditorWithPalette){
-        	MapEditorWithPalette part = (MapEditorWithPalette) mapEditor;
-        	partSize = part.getComposite().getSize();
-        }
-        else {
-        	//java.awt.Dimension size = map.getRenderManager().getMapDisplay().getDisplaySize();
-        	//Point partSize = new Point(size.width,size.height);
-        	partSize = new Point(500,500);
-        }
-        Page page = createPage(template, map, project, partSize );
+            Point partSize;
+            if (mapEditor instanceof MapEditorPart) {
+                MapEditorPart part = (MapEditorPart) mapEditor;
+                partSize = part.getComposite().getSize();
+            } else if (mapEditor instanceof MapEditorWithPalette) {
+                MapEditorWithPalette part = (MapEditorWithPalette) mapEditor;
+                partSize = part.getComposite().getSize();
+            } else {
+                partSize = new Point(500, 500);
+            }
+            Page page = createPage(template, map, project, partSize);
 
-        ApplicationGIS.openProjectElement(page, false);
+            ApplicationGIS.openProjectElement(page, false);
+
+        }
     }
 
-    private Page createPage( Template template, Map map, Project project, Point partSize ) {
+    private Page createPage(Template template, Map map, Project project, Point partSize) {
         int width = 800;
         int height = 600;
         if (partSize != null) {
             width = partSize.x;
             height = partSize.y;
-        }else{
+        } else {
             PageFormat pageFormat = PrinterJob.getPrinterJob().defaultPage();
-            width = new Double(pageFormat.getImageableWidth()).intValue();
-            height = new Double(pageFormat.getImageableHeight()).intValue();
+            width = Double.valueOf(pageFormat.getImageableWidth()).intValue();
+            height = Double.valueOf(pageFormat.getImageableHeight()).intValue();
         }
 
         Page page = ModelFactory.eINSTANCE.createPage();
 
         page.setSize(new Dimension(width, height));
 
-        MessageFormat formatter = new MessageFormat("{0} - " + template.getAbbreviation(), Locale
+        MessageFormat formatter = new MessageFormat("{0} - " + template.getAbbreviation(), Locale //$NON-NLS-1$
                 .getDefault());
         if (page.getName() == null || page.getName().length() == 0) {
-            page.setName(formatter.format(new Object[]{map.getName()}));
+            page.setName(formatter.format(new Object[] { map.getName() }));
         }
 
         page.setProjectInternal(project);
         template.init(page, map);
         Iterator<Box> iter = template.iterator();
-        while( iter.hasNext() ) {
+        while (iter.hasNext()) {
             page.getBoxes().add(iter.next());
         }
         return page;
     }
 
     private Template getPageTemplate() {
-        final java.util.Map<String, TemplateFactory> templateFactories = PrintingPlugin
-                .getDefault().getTemplateFactories();
+        final java.util.Map<String, TemplateFactory> templateFactories = PrintingPlugin.getDefault()
+                .getTemplateFactories();
 
         // TODO move to a preference initializer
         PrintingPlugin.getDefault().getPluginPreferences().setValue(
                 PrintingPlugin.PREF_DEFAULT_TEMPLATE,
                 "org.locationtech.udig.printing.ui.internal.BasicTemplate"); //$NON-NLS-1$
 
-        String defaultTemplate = PrintingPlugin.getDefault().getPluginPreferences().getString(
-                PrintingPlugin.PREF_DEFAULT_TEMPLATE);
+        String defaultTemplate = PrintingPlugin.getDefault().getPluginPreferences()
+                .getString(PrintingPlugin.PREF_DEFAULT_TEMPLATE);
 
         ListDialog dialog = createTemplateChooserDialog(templateFactories);
 
-        TemplateFactory templateFactory = (TemplateFactory) PrintingPlugin.getDefault()
-                .getTemplateFactories().get(defaultTemplate);
+        TemplateFactory templateFactory = PrintingPlugin.getDefault().getTemplateFactories()
+                .get(defaultTemplate);
 
-        dialog.setInitialSelections(new Object[]{templateFactory});
+        dialog.setInitialSelections(new Object[] { templateFactory });
         int result = dialog.open();
         if (result == Window.CANCEL || dialog.getResult().length == 0) {
             return null;
@@ -178,8 +169,7 @@ public class CreatePageAction implements IEditorActionDelegate {
         if (templateFactory == null) {
             PrintingPlugin.log(Messages.CreatePageAction_error_cannotFindDefaultTemplate, null);
 
-            TemplateFactory firstAvailable = (TemplateFactory) templateFactories.values()
-                    .iterator().next();
+            TemplateFactory firstAvailable = templateFactories.values().iterator().next();
             if (firstAvailable == null) {
                 PrintingPlugin.log(
                         "Unable to locate any templates, resorting to hard coded default.", null); //$NON-NLS-1$
@@ -199,26 +189,27 @@ public class CreatePageAction implements IEditorActionDelegate {
      * @return
      */
     private ListDialog createTemplateChooserDialog(
-            final java.util.Map<String, TemplateFactory> templateFactories ) {
+            final java.util.Map<String, TemplateFactory> templateFactories) {
         ListDialog dialog = new ListDialog(Display.getDefault().getActiveShell());
         dialog.setTitle(Messages.CreatePageAction_dialog_title);
         dialog.setMessage(Messages.CreatePageAction_dialog_message);
-        
+
         Set<String> keySet = templateFactories.keySet();
-        List<String> keyList = new ArrayList<String>();
+        List<String> keyList = new ArrayList<>();
         keyList.addAll(keySet);
         Collections.sort(keyList);
-        List<TemplateFactory> valuesList = new ArrayList<TemplateFactory>();
-        for( String key : keyList ) {
+        List<TemplateFactory> valuesList = new ArrayList<>();
+        for (String key : keyList) {
             valuesList.add(templateFactories.get(key));
         }
-        
+
         dialog.setInput(valuesList);
         ArrayContentProvider provider = new ArrayContentProvider();
         dialog.setContentProvider(provider);
 
-        ILabelProvider labelProvider = new LabelProvider(){
-            public String getText( Object element ) {
+        ILabelProvider labelProvider = new LabelProvider() {
+            @Override
+            public String getText(Object element) {
                 return ((TemplateFactory) element).getName();
             }
         };
@@ -226,9 +217,13 @@ public class CreatePageAction implements IEditorActionDelegate {
         return dialog;
     }
 
-    public void setActiveEditor( IAction action, IEditorPart targetEditor ) {
+    @Override
+    public void setActiveEditor(IAction action, IEditorPart targetEditor) {
+
     }
 
-    public void selectionChanged( IAction action, ISelection selection ) {
+    @Override
+    public void selectionChanged(IAction action, ISelection selection) {
+
     }
 }
